--- a/API Financial Planning/Financial_Planner.ipynb
+++ b/API Financial Planning/Financial_Planner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,23 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Current amount of crypto assets\n",
     "my_btc = 1.2\n",
-    "my_eth = 5.3\n",
-    "\n",
-    "crypto_data = {\n",
-    "    \"my crypto\":[1.2, 5.3]\n",
-    "}\n",
-    "crypto = [\"BTC\", \"ETH\"]"
+    "my_eth = 5.3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,17 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of your 1.2 BTC is $13657.79\n",
+      "The current value of your 5.3 ETH is $1991.53\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch current BTC price\n",
-    "my_btc =\n",
+    "btc = requests.get(btc_url).json()\n",
+    "btc_price = btc[\"data\"][\"1\"][\"quotes\"][\"USD\"][\"price\"]\n",
     "# Fetch current ETH price\n",
-    "my_eth =\n",
-    "\n",
+    "eth = requests.get(eth_url).json()\n",
+    "eth_price = eth[\"data\"][\"1027\"][\"quotes\"][\"USD\"][\"price\"]\n",
     "# Compute current value of my crpto\n",
-    "# YOUR CODE HERE!\n",
+    "my_btc_value = my_btc * btc_price\n",
+    "my_eth_value = my_eth * eth_price\n",
     "\n",
     "# Print current crypto wallet balance\n",
     "print(f\"The current value of your {my_btc} BTC is ${my_btc_value:0.2f}\")\n",
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-d1f63c35fa72>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-d1f63c35fa72>\"\u001b[1;36m, line \u001b[1;32m17\u001b[0m\n\u001b[1;33m    print(f\"Current AGG closing price: ${agg_close_price}\")\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Format current date as ISO format\n",
     "today = pd.Timestamp(\"2020-07-14\", tz=\"America/New_York\").isoformat()\n",
@@ -175,8 +190,8 @@
     "timeframe = \"1D\"\n",
     "\n",
     "# Get current closing prices for SPY and AGG\n",
-    "agg_close_price=float(df_portfolio[\"AGG\"][\"close\"])\n",
-    "spy_close_price=float(df_portfolio[\"AAPL\"[\"close\"]])\n",
+    "agg_close_price=float[\"AGG\"][\"close\"]\n",
+    "spy_close_price=float[\"AAPL\"[\"close\"]\n",
     "# Pick AGG and SPY close prices\n",
     "# YOUR CODE HERE!\n",
     "\n",
