--- a/API Financial Planning/Financial_Planner.ipynb
+++ b/API Financial Planning/Financial_Planner.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,15 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current value of your 1.2 BTC is $13657.79\n",
-      "The current value of your 5.3 ETH is $1991.53\n"
+      "The current value of your 1.2 BTC is $13833.32\n",
+      "The current value of your 5.3 ETH is $2005.04\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,16 +172,18 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-d1f63c35fa72>, line 17)",
+     "evalue": "invalid syntax (<ipython-input-11-6eede1843bee>, line 16)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-d1f63c35fa72>\"\u001b[1;36m, line \u001b[1;32m17\u001b[0m\n\u001b[1;33m    print(f\"Current AGG closing price: ${agg_close_price}\")\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-6eede1843bee>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    df=api.get_barset(\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Format current date as ISO format\n",
-    "today = pd.Timestamp(\"2020-07-14\", tz=\"America/New_York\").isoformat()\n",
+    "start_date = pd.Timestamp(\"2019-10-14\", tz=\"America/New_York\").isoformat()\n",
+    "end_date = pd.Timestamp(\"2020-10-14\", tz=\"America/New_York\").isoformat()\n",
+    "\n",
     "\n",
     "# Set the tickers\n",
     "tickers = [\"AGG\", \"SPY\"]\n",
@@ -191,9 +193,14 @@
     "\n",
     "# Get current closing prices for SPY and AGG\n",
     "agg_close_price=float[\"AGG\"][\"close\"]\n",
-    "spy_close_price=float[\"AAPL\"[\"close\"]\n",
+    "spy_close_price=float[\"SPY\"[\"close\"]\n",
     "# Pick AGG and SPY close prices\n",
-    "# YOUR CODE HERE!\n",
+    "df=api.get_barset(\n",
+    "    tickers, \n",
+    "    timeframe, \n",
+    "    start = start_date, \n",
+    "    end = end_date\n",
+    ").df\n",
     "\n",
     "# Print AGG and SPY close prices\n",
     "print(f\"Current AGG closing price: ${agg_close_price}\")\n",
@@ -230,7 +237,8 @@
    "outputs": [],
    "source": [
     "# Create savings DataFrame\n",
-    "df_savings = \n",
+    "df_savings = pd.DataFrame()\n",
+    "df_savings = pd.Series([\"SPY\", \"AGG\"])\n",
     "\n",
     "# Display savings DataFrame\n",
     "display(df_savings)"
@@ -278,6 +286,13 @@
    "outputs": [],
    "source": [
     "# Set start and end dates of five years back from today.\n",
+    "MC_fiveyear = MCSimulation(\n",
+    "    portfolio_data = df_ticker,\n",
+    "    #weights = [.60,.40],\n",
+    "    weights = [1.0],\n",
+    "    num_simulation = 500,\n",
+    "    num_trading_days = 252*5\n",
+    ")\n",
     "# Sample results may vary from the solution based on the time frame chosen\n",
     "start_date = pd.Timestamp('2015-10-14', tz='America/New_York').isoformat()\n",
     "end_date = pd.Timestamp('2020-10-14', tz='America/New_York').isoformat()"
@@ -312,7 +327,7 @@
     "MC_stock_data = MCSimulation(\n",
     "    portfolio_data = ticker_data,\n",
     "    num_simulation = num_sims,\n",
-    "    num_trading_days = 252*3\n",
+    "    num_trading_days = 252*30\n",
     ")"
    ]
   },
@@ -333,6 +348,8 @@
    "outputs": [],
    "source": [
     "# Running a Monte Carlo simulation to forecast 30 years cumulative returns\n",
+    "line_plot = MC_thirtyyear.plot_simulation()\n",
+    "\n",
     "# Set number of simulations\n",
     "num_sims = 500\n",
     "\n",
@@ -363,7 +380,7 @@
    "outputs": [],
    "source": [
     "# Plot probability distribution and confidence intervals\n",
-    "# YOUR CODE HERE!"
+    "dist_plot = MC_fiveyear.plot_distribution()"
    ]
   },
   {
@@ -380,7 +397,7 @@
    "outputs": [],
    "source": [
     "# Fetch summary statistics from the Monte Carlo simulation results\n",
-    "# YOUR CODE HERE!\n",
+    "tbl = MC_fiveyear.summarize_cumulative_return()\n",
     "\n",
     "# Print summary statistics\n",
     "print(tbl)"
@@ -403,7 +420,8 @@
     "initial_investment = 20000\n",
     "\n",
     "# Use the lower and upper `95%` confidence intervals to calculate the range of the possible outcomes of our $20,000\n",
-    "# YOUR CODE HERE!\n",
+    "ci_lower = round(tbl[8]*20000,2)\n",
+    "ci_upper = round(tbl[9]*20000,2)\n",
     "\n",
     "# Print results\n",
     "print(f\"There is a 95% chance that an initial investment of ${initial_investment} in the portfolio\"\n",
@@ -428,13 +446,21 @@
     "initial_investment = 20000 * 1.5\n",
     "\n",
     "# Use the lower and upper `95%` confidence intervals to calculate the range of the possible outcomes of our $30,000\n",
-    "# YOUR CODE HERE!\n",
+    "ci_lower = round(tbl[8]*30000,2)\n",
+    "ci_upper = round(tbl[9]*30000,2)\n",
     "\n",
     "# Print results\n",
     "print(f\"There is a 95% chance that an initial investment of ${initial_investment} in the portfolio\"\n",
     "      f\" over the next 30 years will end within in the range of\"\n",
     "      f\" ${ci_lower} and ${ci_upper}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
