--- a/API Financial Planning/Financial_Planner.ipynb
+++ b/API Financial Planning/Financial_Planner.ipynb
@@ -110,8 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current value of your 1.2 BTC is $13835.69\n",
-      "The current value of your 5.3 ETH is $2013.89\n"
+      "The current value of your 1.2 BTC is $13603.06\n",
+      "The current value of your 5.3 ETH is $1943.99\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,27 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3719NFh00yFEKjDr6t2nzpeddjcdY8uOgnhm7qQz'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alpaca_secret_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +235,76 @@
       "Current AGG closing price: $112.91\n",
       "Current SPY closing price: $296.01\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"5\" halign=\"left\">AGG</th>\n",
+       "      <th colspan=\"5\" halign=\"left\">SPY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-10-14 00:00:00-04:00</th>\n",
+       "      <td>112.9</td>\n",
+       "      <td>112.93</td>\n",
+       "      <td>112.82</td>\n",
+       "      <td>112.91</td>\n",
+       "      <td>1442540</td>\n",
+       "      <td>295.93</td>\n",
+       "      <td>296.67</td>\n",
+       "      <td>295.57</td>\n",
+       "      <td>296.01</td>\n",
+       "      <td>32589599</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             AGG                                      SPY  \\\n",
+       "                            open    high     low   close   volume    open   \n",
+       "2019-10-14 00:00:00-04:00  112.9  112.93  112.82  112.91  1442540  295.93   \n",
+       "\n",
+       "                                                             \n",
+       "                             high     low   close    volume  \n",
+       "2019-10-14 00:00:00-04:00  296.67  295.57  296.01  32589599  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -276,30 +326,42 @@
     ").df\n",
     "\n",
     "\n",
+    "\n",
+    "# Pick AGG and SPY close prices\n",
     "agg_close_price=float(df_portfolio[\"AGG\"][\"close\"])\n",
     "spy_close_price=float(df_portfolio[\"SPY\"][\"close\"])\n",
-    "# Pick AGG and SPY close prices\n",
-    "\n",
     "\n",
     "# Print AGG and SPY close prices\n",
     "print(f\"Current AGG closing price: ${agg_close_price}\")\n",
-    "print(f\"Current SPY closing price: ${spy_close_price}\")"
+    "print(f\"Current SPY closing price: ${spy_close_price}\")\n",
+    "df_portfolio.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of the 200 AGG shares is $22582.00\n",
+      "The current value of the 50 SPY shares is $14800.50\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the current value of shares\n",
-    "my_agg_value = agg_price * df_shares.loc[\"AGG\"][\"shares\"]\n",
-    "my_spy_value = spy_price * df_shares.loc[\"SPY\"][\"shares\"]\n",
+    "\n",
+    "\n",
+    "my_agg_value = agg_close_price * df_shares.loc[\"AGG\"][\"shares\"]\n",
+    "my_spy_value = spy_close_price * df_shares.loc[\"SPY\"][\"shares\"]\n",
     "\n",
     "\n",
     "# Print current value of share\n",
-    "print(f\"The current value of {my_spy} SPY shares is ${my_spy_value:0.2f}\")\n",
-    "print(f\"The current value of {my_agg} AGG shares is ${my_agg_value:0.2f}\")"
+    "print(f\"The current value of the {df_shares.loc['AGG']['shares']} AGG shares is ${my_agg_value:0.2f}\")\n",
+    "print(f\"The current value of the {df_shares.loc['SPY']['shares']} SPY shares is ${my_spy_value:0.2f}\")"
    ]
   },
   {
@@ -328,7 +390,7 @@
    ],
    "source": [
     "# Create savings DataFrame\n",
-    "value_data = [my_agg+ my_spy, my_btc_value + my_eth_value]\n",
+    "value_data = [my_agg_value+ my_spy_value, my_btc_value + my_eth_value]\n",
     "df_savings = pd.DataFrame(value_data, index=[\"Shares\", \"Crypto\"], columns = [\"Amount\"])\n",
     "\n",
     "df_savings = pd.DataFrame()\n",
